--- a/student/index.html
+++ b/student/index.html
@@ -6,19 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tech Horizon Invitation</title>
   <link rel="stylesheet" href="style.css">
- 
+
 </head>
 
-<body>
+<body style="font-family: Arial, sans-serif;background-color: #f9f9f9;margin: 0;padding:0;">
   <table width="100%" bgcolor="#f9f9f9" cellpadding="0" cellspacing="0">
     <tr>
       <td align="center">
         <table class="email-container" cellpadding="0" cellspacing="0">
           <!-- Header -->
           <tr>
-            <td class="header">
-
-            </td>
+            <td class="header"> </td>
           </tr>
 
           <!-- Body -->
