adding guest email and student email

--- a/emails/students.html
+++ b/emails/students.html
@@ -23,7 +23,7 @@
           <!-- Body -->
           <tr class="main-box" style=" border-radius: 15px;">
             <td class="body" style="padding: 20px;color: #333333; font-size: 16px; line-height: 1.6;">
-              <p>Dear [Speaker's Name],</p>
+              <p>Dear [Student's Name],</p>
               <p>
                 📢 Exciting Session Alert: Tech Horizons 📢
               </p>
@@ -51,11 +51,6 @@
                 ✅ Career Guidance: Understand industry demands and how to align your skills.<br>
                 ✅ Interactive Q&A: Get answers to your questions directly from experts.<br>
                 ✅ Networking Opportunity: Meet like-minded peers and potential mentors.
-
-              </p>
-
-              <p>📲 How to Register?<br>
-                Scan the QR code or click here to register 👉 <a href="http://">Click here</a>
               </p>
               <p>Don’t miss this chance to broaden your horizons, clarify your career goals, and prepare for a
                 tech-driven future. Let’s unlock the door to endless opportunities together! 🌟
